--- a/OneDrive/Documents/DLWCV/popup.html
+++ b/OneDrive/Documents/DLWCV/popup.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>OCR Screenshot Tool</h2>
+        <h2>VerifiAI</h2>
 
         <!-- File Input for Image Upload -->
         <div class="upload-section">
@@ -19,11 +19,11 @@
         </div>
 
         <!-- Extract Text Button -->
-        <button id="processImage" class="btn">Extract Text</button>
+        <button id="processImage" class="btn">Check Misinformation Button</button>
 
         <!-- Section to Display Extracted Text -->
         <div id="outputDiv">
-            <p id="output">Extracted text will appear here...</p>
+            <p id="output">Verification result will appear here...</p>
         </div>
     </div>
 
